--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/ProjeoFacul.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.AnimatonClass.jar=src\\imgs\\AnimatonClass.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.AnimatonClass.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
