--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,14 @@ dist.jar=${dist.dir}/ProjeoFacul.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.AnimatonClass.jar=src\\imgs\\AnimatonClass.jar
+file.reference.JPanelSlider.jar=src/imgs/JPanelSlider.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.AnimatonClass.jar}
+    ${file.reference.AnimatonClass.jar}:\
+    ${file.reference.JPanelSlider.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
