adicionando outras empresas

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ProjeoFacul.jar
+dist.jar=${dist.dir}/Projeto_Facul.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.AnimatonClass.jar=src\\imgs\\AnimatonClass.jar
