--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,10 +24,10 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Projeto_Facul.jar
+dist.jar=${dist.dir}/Projeto_Faculdade.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.AnimatonClass.jar=src\\imgs\\AnimatonClass.jar
+file.reference.AnimatonClass.jar=src/imgs/AnimatonClass.jar
 file.reference.JPanelSlider.jar=src/imgs/JPanelSlider.jar
 includes=**
 jar.compress=false
