--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.eclipselink.classpath}:\
     ${file.reference.AnimatonClass.jar}:\
-    ${file.reference.JPanelSlider.jar}
+    ${file.reference.JPanelSlider.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
